--- a/Olivio/style.css
+++ b/Olivio/style.css
@@ -280,6 +280,71 @@ p {
     margin-right: 87px;
 }
 
+.left-side__inner {
+    position: relative;
+}
+
+.left-side_customized-for {
+    position: absolute;
+    z-index: 1;
+    width: 297px;
+    height: 294px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    border-radius: 3.73px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: none;
+    transform: translateY(-200px);
+    left: -50px;
+}
+
+.left-side_customized-for h2 {
+    font-weight: 600;
+    font-size: 14.50px;
+    line-height: 157%;
+    margin-top: 22.64px;
+}
+
+.left-side_customized-for div.line {
+    width: 110.49px;
+    height: 0.75px;
+    background-color: black;
+}
+
+.left-side_customized-for h2.person_name {
+    font-weight: 400;
+    font-size: 11.94px;
+    margin: 0;
+} 
+
+
+.left-side_customized-for img {
+    width: 57.44px;
+    height: 57.44px;
+    border-radius: 50%;
+}
+
+.left-side_customized-for h1 {
+    font-weight: 700;
+    font-size: 15.93px;
+    line-height: 157%;
+    color: black;
+    margin: 0;
+}
+
+.left-side_customized-for li {
+    font-size: 10.62px;
+    line-height: 157%;
+    color: black;
+}
+
+.left-side_customized-for li:last-child {
+    margin-bottom: 30.27px;
+}
+
 .our-product_right-side {
     display: flex;
     flex-direction: column;
@@ -312,3 +377,27 @@ p {
     margin-bottom: 40px;
 }
 
+.footer__inner {
+    width: 100vw;
+    max-width: 1920px;
+    height: 654px;
+    background-color: #245852;
+    text-transform: capitalize;
+    color: white;
+    font-weight: 600;
+    font-size: 25px;
+}
+
+.footer__inner h2 {
+    font-family: 'Avenir Black', 'Arial Black', sans-serif;
+    color: white;
+    font-size: 40px;
+    padding-top: 95px;
+    margin: 0 0 60px 275px;;
+}
+
+.footer__inner li {
+    margin-bottom: 60px;
+    margin-left: 275px;
+    list-style: none;
+}
